# elmerfem

./: .mailmap  CMakeLists.txt
eio/: COMPILING  Makefile.am  Makefile.in  MakefileC.dec  MakefileC.linux  MakefileC.sgi  MakefileC.win  MakefileF.dec  MakefileF.ibm  MakefileF.linux  MakefileF.sgi  MakefileF.win  TODO  acx_elmer.m4  config.h.in  configure  configure.in
eio/include/: EIOConstraintAgent.h  EIODualMeshAgent.h  EIOGeometryAgent.h  EIOMeshAgent.h  EIOModelDataAgent.h  EIOModelManager.h  EIOPartReader.h  EIOPartWriter.h  EIOSolverAgent.h  Makefile.am  Makefile.in  eio_api.h  eio_api2.h  eio_config.h  eio_oldapi.h
eio/src/: EIOConstraintAgent.cpp  EIODualMeshAgent.cpp  EIOGeometryAgent.cpp  EIOMeshAgent.cpp  EIOModelDataAgent.cpp  EIOModelManager.cpp  EIOPartReader.cpp  EIOPartWriter.cpp  EIOSolverAgent.cpp  Makefile.am  Makefile.in  eio_api.cpp  eio_api_c.cpp  eio_api_f.cpp
elmergrid/: LICENSES  Makefile.in  acx_elmer.m4  config.h.in  configure  configure.in
elmergrid/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
elmergrid/src/: Makefile.am  Makefile.in  common.c  common.h  easymesh.c  easymesh.h  femelmer.c  femelmer.h  femfact.c  femfact.h  femfile.c  femfile.h  femfilein.c  femfilein.h  femfileout.c  femfileout.h  feminfo.c  feminfo.h  femknot.c  femknot.h  femmesh.c  femmesh.h  fempre.c  femsolve.c  femsolve.h  femtools.c  femtypes.h  makefile.sun  makefile.unix  nrutil.c  nrutil.h
elmerparam/src/: ElmerParam.f90  Makefile.am  Makefile.in  dynarray.c  dynarray.h  elmerparam.c  elmerparam.h  elmerparamf.f90  global.h  modelline.c  modelline.h
fem/: COMPILING  Doxyfile.in  LICENSES  Makeconf.in  Makefile.am  Makefile.in  NODIST  OTHERS  aclocal.m4  acx_blas.m4  acx_elmer.m4  acx_lapack.m4  acx_mpi.m4  autogen.sh  config.h  config.h.in  configure  configure.ac  configure.in  elements.def
fem/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
fem/src/: Acoustics.f90  Acoustics.src  Adaptive.f90  Adaptive.src  AdvectionDiffusion.f90  AdvectionDiffusion.src  AdvectionReaction.src  ApertureAmplitude.src  AplacExport.src  ArteryOutlet.src  ArtificialCompressibility.src  BandMatrix.src  BandwidthOptimize.src  BlockSolve.src  CPUTime.c  CRSMatrix.f90  CRSMatrix.src  ClusteringMethods.src  CoordinateSystems.src  CoupledNSUpdate.src  DCRComplexSolve.f90  DCRComplexSolve.src  DFTSolver.src  DataToFieldSolver.src  DefUtils.f90  DefUtils.src  Differentials.f90  Differentials.src  DiffuseConvectiveAnisotropic.f90  DiffuseConvectiveAnisotropic.src  DiffuseConvectiveGeneralAnisotropic.f90  DiffuseConvectiveGeneralAnisotropic.src  DirectSolve.f90  DirectSolve.src  DissipativeHelmholtz.src  DistanceSolve.src  DivergenceSolver.src  EigenSolve.src  ElasticSolve.f90  ElasticSolve.src  (+263 more)
fem/tests/: ElmerSolver test how-to.txt  ElmerSolver_test_how-to.txt  Makefile.am  Makefile.in  compare  compare.c  findnorm  findnorm.c  res.awk  runtests  runtests.in  test_macros.cmake
front/: Makefile.am  Makefile.in  aclocal.m4  acx_elmer.m4  config.h.in  configure  configure.in
front/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
front/include/: Makefile.am  Makefile.in  ecif_body.h  ecif_body2D.h  ecif_body3D.h  ecif_bodyElement.h  ecif_bodyElement1D.h  ecif_bodyElement2D.h  ecif_bodyElement3D.h  ecif_bodyElementGroup.h  ecif_bodyElementLoop.h  ecif_bodyForce.h  ecif_bodyLayer.h  ecif_bodyParameter.h  ecif_boundaryCondition.h  ecif_boundaryParameter.h  ecif_boundbox.h  ecif_calculator.h  ecif_const.h  ecif_constant.h  ecif_control.h  ecif_coordinate.h  ecif_datafile.h  ecif_def.h  ecif_def_stl.h  ecif_def_trx.h  ecif_equation.h  ecif_equationVariables.h  ecif_func.h  ecif_geometry.h  ecif_gridH.h  ecif_gridParameter.h  ecif_initialCondition.h  ecif_input.h  ecif_inputAbaqus.h  ecif_inputEgf.h  ecif_inputElmer.h  ecif_inputEmf.h  ecif_inputFidap.h  ecif_inputFront.h  (+34 more)
front/src/: Makefile.am  Makefile.in  ecif_body.cpp  ecif_body2D.cpp  ecif_body3D.cpp  ecif_bodyElement.cpp  ecif_bodyElement1D.cpp  ecif_bodyElement2D.cpp  ecif_bodyElement3D.cpp  ecif_bodyElementGroup.cpp  ecif_bodyElementLoop.cpp  ecif_bodyForce.cpp  ecif_bodyLayer.cpp  ecif_bodyParameter.cpp  ecif_boundaryCondition.cpp  ecif_boundaryParameter.cpp  ecif_boundbox.cpp  ecif_calculator.cpp  ecif_const.cpp  ecif_constant.cpp  ecif_control.cpp  ecif_coordinate.cpp  ecif_datafile.cpp  ecif_def_trx.cpp  ecif_equation.cpp  ecif_equationVariables.cpp  ecif_func.cpp  ecif_geometry.cpp  ecif_gridH.cpp  ecif_gridParameter.cpp  ecif_initialCondition.cpp  ecif_input.cpp  ecif_inputAbaqus.cpp  ecif_inputEgf.cpp  ecif_inputElmer.cpp  ecif_inputEmf.cpp  ecif_inputFidap.cpp  ecif_inputFront.cpp  ecif_inputIdeas.cpp  ecif_inputIdeasWF.cpp  (+24 more)
front/tcl/: ecif_tcl_namespaces.tcl  ecif_tk_aboutBox.tcl  ecif_tk_bodyDisplayPanel.tcl  ecif_tk_bodyInfoPanel.tcl  ecif_tk_bodyPropertiesPanel.tcl  ecif_tk_boundariesPanel.tcl  ecif_tk_constantPanel.tcl  ecif_tk_equationVariablesPanel.tcl  (+27 more)
frontlib/: Makefile.ibm  Makefile.in  Makefile.linux  Makefile.sgi  Makefile.win  aclocal.m4  config.h.in  configure  configure.in  make.inc
hutiter/: Makefile.in  acx_blas.m4  acx_elmer.m4  acx_lapack.m4  autogen.sh  config.h.in  configure  configure.in
matc/: Makefile.in  Makefile.win  aclocal.m4  acx_elmer.m4  acx_readline.m4  autogen.sh  config.h.in  configure  configure.in
matc/src/: Makefile  (+29 more)
mathlibs/: Makefile.in  aclocal.m4  acx_elmer.m4  acx_mpi.m4  configure  configure.in
meshgen2d/: Makefile.in  acx_elmer.m4  config.h.in  configure  configure.in
post/: Makefile.in  aclocal.m4  acx_elmer.m4  acx_ftgl.m4  config.h.in  configure  configure.in
sparse/: AUTHORS  Makefile.am  Makefile.dec  Makefile.in  Makefile.linux  Makefile.sgi  Makefile.win  configure.in  spallocate.c  spbuild.c  spconfig.h  spdefs.h  spdoc  spdoc.ms  spfactor.c  spfortran.c  spmatrix.h  spoutput.c  sprevision  spsolve.c  sptest.c  sputils.c
umfpack/: Makefile  Makefile.in  acx_elmer.m4  config.h.in  config.status  configure  configure.in
(+2197 files in other folders)
