AC_INIT(src/eio_api_f.cpp)

dnl the fortran stuff needs to be pretty new to work on SunOS
AC_PREREQ(2.59c)

AC_CANONICAL_HOST
AC_CANONICAL_TARGET

AM_INIT_AUTOMAKE(eio, 1.0.0)

AC_LANG_COMPILER

AC_PROG_CXX

AM_MAINTAINER_MODE

AC_PROG_RANLIB

AC_PROG_FC
AC_FC_WRAPPERS
AC_FC_DUMMY_MAIN

case "$ac_cv_fc_mangling" in
  "upper case, no underscore, no extra underscore" | \
  "upper case, no underscores")
    AC_DEFINE(LINKTYP, 2, "Mangling: upper case, no underscore, no extra underscore") ;;
  "lower case, no underscore, no extra underscore" | \
  "lower case, no underscores" )
    AC_DEFINE(LINKTYP, 3, "Mangling: lower case, no underscore, no extra underscore") ;;
  "lower case, underscore, no extra underscore" | \
  "lower case, single underscores")
    AC_DEFINE(LINKTYP, 1, "Mangling: lower case, underscore, no extra underscore") ;;
  "lower case, underscore, extra underscore" | \
  "lower case, double underscores")
    AC_DEFINE(LINKTYP, 1, "Mangling: lower case, underscore, extra underscore") ;;
  *)
    AC_MSG_ERROR([Unknown sort of Fortran name mangling. You compiler is most likely not worthy of existence, all attempts to use is are futile.]) ;;
esac

AC_SUBST(AM_FCFLAGS) 

AC_STDC_HEADERS

AC_CONFIG_HEADER(config.h) 

AC_OUTPUT([
Makefile

include/Makefile

src/Makefile])
