AC_INIT(src/eio_api_f.cpp)

dnl the fortran stuff needs to be pretty new to work on SunOS
AC_PREREQ(2.59c)

AC_CANONICAL_HOST
AC_CANONICAL_TARGET

AM_INIT_AUTOMAKE(eio, 1.0.0)

sinclude(acx_elmer.m4)
ACX_DEBUG

AC_PROG_CC([xlc pathcc icc cc gcc])
AC_PROG_CXX([xlC pathCC icc CC g++])
AC_PROG_FC([xlf90 pathf90 ifort f90 g95])


AC_PROG_CXX

AM_MAINTAINER_MODE

AC_PROG_RANLIB

dnl It is important to do this before *_WRAPPERS, because the ldflags might be different for 32 and 64 bits
ACX_CHECK_B64FLAGS

AC_FC_WRAPPERS
AC_FC_DUMMY_MAIN

dnl case "$ac_cv_fc_mangling" in
dnl   "upper case, no underscore, no extra underscore" | \
dnl   "upper case, no underscores")
dnl     AC_DEFINE(LINKTYP, 2, "Mangling: upper case, no underscore, no extra underscore") ;;
dnl   "lower case, no underscore, no extra underscore" | \
dnl   "lower case, no underscores" )
dnl     AC_DEFINE(LINKTYP, 3, "Mangling: lower case, no underscore, no extra underscore") ;;
dnl   "lower case, underscore, no extra underscore" | \
dnl   "lower case, single underscores")
dnl     AC_DEFINE(LINKTYP, 1, "Mangling: lower case, underscore, no extra underscore") ;;
dnl   "lower case, underscore, extra underscore" | \
dnl   "lower case, double underscores")
dnl     AC_DEFINE(LINKTYP, 1, "Mangling: lower case, underscore, extra underscore") ;;
dnl   *)
dnl     AC_MSG_ERROR([Unknown sort of Fortran name mangling. You compiler is most likely not worthy of existence, all attempts to use is are futile.]) ;;
dnl esac

dnl AC_SUBST(AM_FCFLAGS) 

AC_STDC_HEADERS

AC_CONFIG_HEADER(config.h) 

AC_OUTPUT([
Makefile

include/Makefile

src/Makefile])
