AC_INIT(src/common.c)

AC_CANONICAL_HOST
AC_CANONICAL_TARGET

AM_INIT_AUTOMAKE(elmergrid, 5.4.0)

dnl default optimization flags
sinclude(acx_elmer.m4)
ACX_HOST
ACX_PLATFORM_DEFS
ACX_DEBUG
ACX_PROG_AR

dnl Checks for programs.
AC_PROG_RANLIB

AC_PROG_CC
AC_STDC_HEADERS
AC_CHECK_LIB(m,sqrt)

LIBS="-L. $LIBS -L$prefix/lib"
LDFLAGS="-L. $LDFLAGS -L$prefix/lib"

ACX_MATC([], [AC_MSG_ERROR([libmatc $ELMER_LIBERRORMSG])])
LIBS="$LIBS $MATC_LIBS"


ACX_CHECK_B64FLAGS

AM_MAINTAINER_MODE

AC_CONFIG_HEADER(config.h) 

AC_OUTPUT([
Makefile
src/Makefile
src/metis/Makefile
])
